# eclass-mcp-server

./: .gitignore  LICENSE  README.md  eclass_client.py  example.env  pyproject.toml  run_server.py
docs/: README.md  architecture.md  how-it-works.md  mcp-sdk-integration.md  tools-reference.md
docs/reference/: tools-reference.md  wire-protocol.md
src/eclass_mcp_server/: __init__.py  authentication.py  course_management.py  html_parsing.py  server.py
src/eclass_mcp_server/test/: __init__.py  run_all_tests.py  test_courses.py  test_login.py
